--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -9,11 +9,15 @@
     {% tailwind_css %}
   </head>
 
-  <body class="bg-indigo-500 font-serif leading-normal tracking-normal">
-    <div class="container mx-auto">
-      <section class="flex items-center justify-center h-screen">
-        <h1 class="text-5xl">Django + Tailwind</h1>
-      </section>
-    </div>
+  <body class="bg-indigo-500">
+    <section class="grid justify-center my-[300px]">
+      <h1 class="text-2xl text-white">Django+Tailwindcss</h1>
+      <a href="about/" class="mt-4 bg-red-500 hover:bg-red-700 text-white flex justify-center p-4 rounded-lg">About</a>
+      <div class="mt-4 flex justify-center">
+        <div class="g-ytsubscribe" data-channelid="UCRPH_MP4WE2WeKiwd4f4EAQ" data-layout="default" data-count="default"></div>
+      </div>
+    </section>
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <script src="{% static 'script/script.js' %}"></script>
   </body>
 </html>
