--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -12,6 +12,13 @@
   <body class="bg-indigo-500">
     <section class="grid justify-center my-[300px]">
       <h1 class="text-2xl text-white">Django+Tailwindcss</h1>
+      <iframe
+        class="lg:w-[560px] lg:h-[315px]"
+        src="https://www.youtube.com/embed/Td21l-gY3M0?si=eKHuMBb5YV5kdID7&amp;controls=0"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
       <a href="about/" class="mt-4 bg-red-500 hover:bg-red-700 text-white flex justify-center p-4 rounded-lg">About</a>
       <div class="mt-4 flex justify-center">
         <div class="g-ytsubscribe" data-channelid="UCRPH_MP4WE2WeKiwd4f4EAQ" data-layout="default" data-count="default"></div>
