--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -10,7 +10,7 @@
   </head>
 
   <body class="bg-indigo-500">
-    <section class="grid justify-center my-[300px]">
+    <section class="grid justify-center mt-[170px]">
       <h1 class="text-2xl text-white">Django+Tailwindcss</h1>
       <iframe
         class="lg:w-[560px] lg:h-[315px]"
