--- a/theme/templates/pages/installation.html
+++ b/theme/templates/pages/installation.html
@@ -9,6 +9,6 @@
     {% tailwind_css %}
   </head>
   <body class="bg-indigo-500">
-    <h1 class="text-center">Halaman About</h1>
+    <h1 class="text-center text-white">Halaman Installation</h1>
   </body>
 </html>
